src/gateway/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-deploy
  template:
    metadata:
      labels:
        app: gateway-deploy
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          volumeMounts:
            - name: nginx-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          ports:
            - containerPort: 80
      volumes:
        - name: nginx-volume
          configMap:
            name: gateway-configmap
