src/gateway/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-deploy
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  type: ClusterIP
